--- a/style.css
+++ b/style.css
@@ -1,40 +1,51 @@
-#board {
+.board {
   display: grid;
-  grid-template-columns: repeat(19, 40px);
-  grid-template-rows: repeat(19, 40px);
-  border: 2px solid #000;
+  grid-template-columns: repeat(19, 1fr);
+  grid-template-rows: repeat(19, 1fr);
+  width: 500px;
+  height: 500px;
+  border: 1px solid #000;
 }
 
 .cell {
-  width: 60px;
-  height: 60px;
-  border: 2px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0; /* 글자 숨기기 */
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000;
+  position: relative;
 }
 
 .black-stone {
-  width: 30px;
-  height: 30px;
-  background: #000;
+  width: 80%;
+  height: 80%;
+  background-color: #000;
   border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .white-stone {
-  width: 30px;
-  height: 30px;
-  background: #fff;
-  border: 1px solid #000;
+  width: 80%;
+  height: 80%;
+  background-color: wheat;
   border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
-#result {
-  font-size: 18px;
+.game-info{
+  width: 15vw;;
+  height: 20vh;;
+  display : flex;
 }
-
-#restart {
-  margin-top: 10px;
-  font-size: 18px;
+#winner-info{
+  width: 5vw;
+  height: 10vh;
+  font-size: 24px;
+}
+button{
+  width : 5vw;
+  height: 10vh;;
 }
